# IronCompetition

./: IronCompetition.cabal
app/: Main.hs
