cabal-version:      3.0
name:               IronCompetition
version:            0.1.0.0
author:             olligobber
maintainer:         sirolligobbervii@yahoo.com.au
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-tabs

executable IronCompetition
    import:           warnings
    main-is:          Main.hs

    default-extensions: OverloadedStrings

    build-depends:
        base >=4.17.2.0 && <5,
        req >=3.13.4 && <4,
        vector >=0.13.0.0 && <1,
        aeson >=2.2.3.0 && <3,
        bytestring >=0.12.1 && <1,
        text >=2.1.1 && <3,

    hs-source-dirs:   app
    default-language: Haskell2010
